--- a/src/app/employer/employer.component.html
+++ b/src/app/employer/employer.component.html
@@ -20,21 +20,29 @@
           <input type="text" class="form-control" id="loc" ngModel="location" name="location">
         </div>
       </div>
+        <div class="form-inline">
       <div class="form-group">
         <label for="industry">Industry name:</label>
         <input type="text" class="form-control" id="industry" ngModel="industry" name="industry">
       </div>
+        </div>
+        <div class="form-inline">
       <div class="form-group">
         <label for="designation">Designation: </label>
         <input type="text" class="form-control" id="designation" ngModel="designation" name="designation">
       </div>
+        </div>
+        <div class="form-inline">
       <div class="form-group">
         <label for="mno">Company Contact No.:</label>
         <input type="number"  class="form-control" id="mno" ngModel="compnayNumber" name="companyNumber">
       </div>
+        </div>
+        <div class="form-inline">
         <div class="form-group">
           <label for="mno2">Your (official) Contact No.:</label>
           <input type="number"  class="form-control" id="mno2" ngModel="mobileNumber" name="mobileNumber">
+        </div>
         </div>
       </div>
 
