--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -13,14 +13,14 @@
               <div class="form-group">
                 <i ></i>
                 <label for="username" class>Username</label>
-                <input id="username" ngModel="username" type="text" name="username">
+                <input id="username" [(ngModel)]="username" type="text" name="username">
 
               </div>
 
               <div class="form-group">
                 <i ></i>
                 <label for="password">Password</label>
-                <input id="password" type="password" ngModel="password" name="password">
+                <input id="password" type="password" [(ngModel)]="password" name="password">
 
               </div>
 
