--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   {{title}}
 </h1>
   <nav>
-    <a routerLink="/signup" routerLinkActive="active">Crisis Center</a>
-    <a routerLink="/heroes" routerLinkActive="active">Heroes</a>
+    <a routerLink="/signup" routerLinkActive="active">Signup</a>
+    <a routerLink="/viewcv" routerLinkActive="active">CV View</a>
   </nav>
   <router-outlet></router-outlet>
 
