adding cv to backend

--- a/src/app/cv1/cv1.component.html
+++ b/src/app/cv1/cv1.component.html
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <label for="pd">Profile Description</label>
-        <input type="text" class="form-control" id="pd" [(ngModel)]="profile_desc" name="profileDesc">
+        <input type="text" class="form-control" id="pd" [(ngModel)]="ProfileDescription" name="profileDesc">
       </div>
       <div class="form-group">
         <label for="ks">What are your KEY skills?:</label>
