--- a/src/app/video-upload/video-upload.component.html
+++ b/src/app/video-upload/video-upload.component.html
@@ -1,13 +1,14 @@
 
 
 <div>
+  working
 <span id="signinButton" class="pre-sign-in">
       <!-- IMPORTANT: Replace the value of the <code>data-clientid</code>
            attribute in the following tag with your project's client ID. -->
       <span
         class="g-signin"
         data-callback="signinCallback"
-        data-clientid="1034451067661-h7v9fipq91k83log7c47f49l1o257rl4.apps.googleusercontent.com"
+        data-clientid="497491945444-819npjqbbj5l9b2toutsijcj14h3rg1r.apps.googleusercontent.com"
         data-cookiepolicy="single_host_origin"
         data-scope="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube">
       </span>
@@ -45,17 +46,14 @@
     </div>
 
     <div class="post-upload">
-      <p>Uploaded video with id <span id="video-id"></span>. Polling for status...</p>
+      <p>Uploaded video with id <span (change)="processcompleted()" id="video-id"></span>. Polling for status...</p>
+
       <ul id="post-upload-status"></ul>
       <div id="player"></div>
     </div>
     <p id="disclaimer">By uploading a video, you certify that you own all rights to the content or that you are authorized by the owner to make the content publicly available on YouTube, and that it otherwise complies with the YouTube Terms of Service located at <a href="http://www.youtube.com/t/terms" target="_blank">http://www.youtube.com/t/terms</a></p>
   </div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="//apis.google.com/js/client:plusone.js"></script>
-  <script src="cors_upload.js"></script>
-  <script src="upload_video.js"></script>
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
+
 </div>
 </div>
