--- a/src/app/visual-cv/visual-cv.component.html
+++ b/src/app/visual-cv/visual-cv.component.html
@@ -1,27 +1,27 @@
-<div class="row">
+<div class="row" *ngIf="cv">
   <div class="col-md-4">
     <img src="#" class="img-rounded" alt="PROFILE PIC" style="background-color:lavender;">
   </div>
-  <div class="col-md-8" style="background-color:lavender;"> FULL NAME <br>{{cv.fullName}}</div>
+  <div class="col-md-8" style="background-color:lavender;"> FULL NAME <br>{{cv?.fullName}}</div>
 </div>
 <div class="row">
-  <div class="col-md-8" style="background-color:lavender;"> PROFILE DESCRIPTION <br> {{cv.profileDesc}}</div>
-  <div class="col-md-4" style="background-color: lavender;"> DOB: <br> {{user.dob}}</div>
+  <div class="col-md-8" style="background-color:lavender;"> PROFILE DESCRIPTION <br> {{cv?.profileDesc}}</div>
+  <div class="col-md-4" style="background-color: lavender;"> DOB: <br> {{user?.dob}}</div>
 </div>
 <div class="row">
-  <div class="col-md-4" style="background-color:lavender;"> Mobile no. <br> {{user.phone}}</div>
-  <div class="col-md-4" style="background-color:lavender;"> Email <br>{{ user.email}} </div>
-  <div class="col-md-4" style="background-color:lavender;"> Location <br> {{cv.location}}</div>
+  <div class="col-md-4" style="background-color:lavender;"> Mobile no. <br> {{user?.phone}}</div>
+  <div class="col-md-4" style="background-color:lavender;"> Email <br>{{ user?.email}} </div>
+  <div class="col-md-4" style="background-color:lavender;"> Location <br> {{cv?.location}}</div>
 </div>
 <div class="row">
-  <div class="col-md-5" style="background-color:lavender;"> Industry <br>{{cv.industry}}</div>
-  <div class="col-md-5" style="background-color:lavender;"> Functional-Area <br> {{cv.functional_area}}</div>
-  <div class="col-md-2" style="background-color:lavender;"> Work Experience <br> {{cv.wexp}} </div>
+  <div class="col-md-5" style="background-color:lavender;"> Industry <br>{{cv?.industry}}</div>
+  <div class="col-md-5" style="background-color:lavender;"> Functional-Area <br> {{cv?.functional_area}}</div>
+  <div class="col-md-2" style="background-color:lavender;"> Work Experience <br> {{cv?.wexp}} </div>
 </div>
-<div class="keyskills" *ngFor="let num of getNumber(cv.keySkills.length)">
-  <div  style="background-color:lavender;">Key Skills {{num}} : {{cv.keySkills[num]}}</div>
+<div class="keyskills" *ngFor="let num of getNumber(cv?.keySkills?.length)">
+  <div  style="background-color:lavender;">Key Skills {{num}} : {{cv?.keySkills[num]}}</div>
 </div>
 
-<div class="degrees" *ngFor="let num of getNumber(cv.arr.length)">
-  <div  style="background-color:lavender;">DEGREE {{num}} : {{cv.arr[num]}}</div>
+<div class="degrees" *ngFor="let num of getNumber(cv?.arr?.length)">
+  <div  style="background-color:lavender;">DEGREE {{num}} : {{cv?.arr[num]}}</div>
 </div>
